# Thesis_Aadishree_Borkar

./: .env.sample  Doc_processing_agent.py  README.md  RFI_schema.py  RFI_tools.py  create_RFI_agent.py  create_doc_processing_agent.py  create_market_research_agent.py  doc_agent_tools copy.py  doc_agent_tools.py  doc_intelligence_test.py  main.py  market_research_agent.py  market_research_agent_tools.py  pyproject.toml  requirements.txt  run_RFI_agent.py  run_market_research_agent.py  tool_test.py  web_search_tool.py
utils/: document_intelligence_handler.py  handler_result.py
