[project]
name = "procurement-agent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-ai-agents==1.1.0b3",
    "azure-ai-projects==1.0.0b11",
    "azure-identity>=1.23.0",
    "ddgs>=9.2.3",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.3.27",
    "pandas>=2.3.1",
]
